# mlloop

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml  publish.yml
docs/: integrations.md
examples/: build_demo.py
src/mlloop/: __init__.py  artifacts.py  cli.py  dashboard.py  diagnostics.py  ensembling.py  fe_probe.py  forensics.py  hardware.py  ledger.py  metrics.py  report.py  server.py  service.py  tabular.py  viz.py
src/mlloop/static/: dashboard.html
tests/: conftest.py  test_artifacts.py  test_custom_metrics.py  test_dashboard.py  test_ensemble_probe.py  test_gates.py  test_gpu_consent.py  test_happy_path.py  test_phase1.py  test_phase3.py  test_stop_evidence.py
