[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlloop"
version = "0.0.1"
description = "A scientific-method harness for AI-driven ML training: experiment ledger, hypothesis gates, diagnostics, and data-verdict reports over MCP."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "MLLoop contributors" }]
keywords = ["mcp", "machine-learning", "agents", "experiment-tracking", "data-quality"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.2",
    "pandas>=2.0",
    "pyarrow>=14",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "cleanlab>=2.6",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
mlloop = "mlloop.cli:main"

[project.urls]
Homepage = "https://github.com/mlloop/mlloop"

[tool.hatch.build.targets.wheel]
packages = ["src/mlloop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
